[feat] Java安全管理器